# FinXtractor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  events.py  main.py
config/: llm.yaml  models.yaml  param.yaml  patterns.yaml
data/ground_truth/: citigroup.json
src/finxtractor/: cli.py  config.py  dashboard.py
src/finxtractor/agents/: analyst.py  extractor.py  page_locator.py  prompts.py  resolver.py  toc.py  vlm_agent.py
src/finxtractor/agents/tools/: __init__.py  analyst.py  extractor.py  resolver.py  vlm.py
src/finxtractor/eval/: scorecard.py
src/finxtractor/graph/: builder.py  queries.py
src/finxtractor/llm/: client.py  config.py  prompts.py
src/finxtractor/normalize/: aliases.py  current_items.py  llm_mapper.py  mapper.py  normalize.py
src/finxtractor/orchestration/: graph.py  nodes.py  orchestrator.py  router.py  state.py  vlm_node.py
src/finxtractor/parsing/: docling_parser.py  note_tables.py  notes.py  outline.py  parser.py  routing.py  statements.py  text.py  units.py  vlm_fallback.py
src/finxtractor/schemas/: __init__.py  canonical.py  note.py  statement.py
src/finxtractor/scoring/: altman.py  composite.py  graph_wiring.py  ratios.py  risk.py  schemas.py
src/finxtractor/services/llm/: __init__.py  base.py  ollama.py  openrouter.py
src/finxtractor/services/ocr/: __init__.py
src/finxtractor/services/pdf_reader/: __init__.py  base.py  pymupdf.py
src/finxtractor/services/table_extractor/: __init__.py  base.py  docling.py
src/finxtractor/services/vlm/: __init__.py  base.py  extractor.py
src/finxtractor/validate/: checks.py  confidence.py  hitl.py  results.py  retry.py
tests/: test_notes.py
