[project]
name = "finxtractor"
version = "0.1.0"
description = ""
authors = [
    {name = "vishalgimhan",email = "vishalgimhan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "typer (>=0.26.7,<0.27.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "finxtractor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
finxtractor = "finxtractor.cli:app"