[project]
name = "finxtractor"
version = "0.1.0"
description = ""
authors = [
    {name = "vishalgimhan",email = "vishalgimhan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >=3.14.2,<4.0"
dependencies = [
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "docling (>=2.106.0,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "typer (>=0.12.5,<0.25.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-openai (>=1.3.3,<2.0.0)",
    "langgraph (>=1.2.6,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=3.1.0,<4.0.0)",
    "onnxruntime (>=1.27.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "streamlit (>=1.58.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "finxtractor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
finxtractor = "finxtractor.cli:app"
[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)"
]
